--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
-background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/109/034/original/wide-building-clock.jpeg?1704259314");
-background-size: cover;
+background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/916/original/dark-clock.jpeg?1707666223");
 background-repeat: no-repeat;
-display: block;
+background-size: contain;
+background-position: center;
 margin: auto;
 font-family: sans-serif;
+max-width: 600px;
 }
 
 h1 {
@@ -30,7 +31,7 @@ select {
   max-width: 400px;
   margin: 60px auto;
   background: white;
-  opacity: 80%;
+  opacity: 70%;
   padding: 30px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 10px;
@@ -49,7 +50,7 @@ select {
 }
 
 .date {
-  opacity: 0.7;
+  opacity: 1.0;
 }
 
 .time {
@@ -67,4 +68,55 @@ footer {
   text-align: center;
   font-size: 14px;
   color: rgba(0, 0, 0, 0.8);
+}
+
+@media only screen and (max-width: 600px) {
+  
+  .container {
+    background-size: cover;
+    background-position: center;
+    opacity: 75%;
+  }
+
+  h1 {
+  font-size: 26=8px;
+}
+
+h2 {
+  margin: 0 0 5px;
+  font-size: 25px;
+  font-weight: 800;
+}
+
+select {
+  font-size: 18px;
+  
+}
+
+.city {
+  padding: 20px 0;
+  margin: 5px;
+  
+}
+
+.date {
+  opacity: 1.0;
+  font-weight: 500;
+}
+
+.time {
+  font-size: 26px;
+
+}
+
+.time small {
+  font-size: 13px;
+  line-height: 28px;
+}
+
+footer {
+  font-size: 12px;
+  
+}
+
 }
