updated background color

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #082D3E;
 background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/916/original/dark-clock.jpeg?1707666223");
 background-repeat: no-repeat;
 background-size: contain;
